Perubahan pelukis.go dan openapi
